// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsToolbar > renders correctly in device overview 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class=""
    data-v-bc209aca=""
    tag="div"
  >
    <span
      data-v-bc209aca=""
      id="app-toolbar-title"
    >
      Device
    </span>
  </v-toolbar-title-stub>
  
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly in device overview in mobile 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class="font-weight-medium"
    data-v-bc209aca=""
    tag="div"
  >
    
    <settings-side-menu-stub
      data-v-1333bf53=""
    />
    
  </v-toolbar-title-stub>
  
  <evocon-v-button-stub
    color=""
    data-v-1333bf53=""
    icon=""
    iconcolor=""
    size="small"
    text="Contact support"
    textclass=""
    type="primary"
    variant="tonal"
  />
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly in position overview 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class=""
    data-v-bc209aca=""
    tag="div"
  >
    <span
      data-v-bc209aca=""
      id="app-toolbar-title"
    >
      Position
    </span>
  </v-toolbar-title-stub>
  
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly in position overview in mobile 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class="font-weight-medium"
    data-v-bc209aca=""
    tag="div"
  >
    
    <settings-side-menu-stub
      data-v-1333bf53=""
    />
    
  </v-toolbar-title-stub>
  
  <evocon-v-button-stub
    color=""
    data-v-1333bf53=""
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    iconcolor="white"
    size="default"
    text=""
    textclass=""
    type="primary"
  />
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly in positions edit 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class=""
    data-v-bc209aca=""
    tag="div"
  >
    <span
      data-v-bc209aca=""
      id="app-toolbar-title"
    >
      Position
    </span>
  </v-toolbar-title-stub>
  
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly in positions edit in mobile 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class=""
    data-v-bc209aca=""
    tag="div"
  >
    <span
      data-v-bc209aca=""
      id="app-toolbar-title"
    >
      Position
    </span>
  </v-toolbar-title-stub>
  
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly in profile 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class=""
    data-v-bc209aca=""
    tag="div"
  >
    <span
      data-v-bc209aca=""
      id="app-toolbar-title"
    >
      Profile
    </span>
  </v-toolbar-title-stub>
  
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly in profile in mobile 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class="font-weight-medium"
    data-v-bc209aca=""
    tag="div"
  >
    
    <settings-side-menu-stub
      data-v-1333bf53=""
    />
    
  </v-toolbar-title-stub>
  
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly in settings main view 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class=""
    data-v-bc209aca=""
    tag="div"
  >
    <span
      data-v-bc209aca=""
      id="app-toolbar-title"
    >
      Test
    </span>
  </v-toolbar-title-stub>
  
  <div
    class="export-settings"
    data-v-1333bf53=""
  >
    <evocon-v-tooltip-wrap-stub
      data-v-1333bf53=""
      location="top"
      opendelay="500"
      text="Export data"
    />
  </div>
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly in stop reasons overview 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class=""
    data-v-bc209aca=""
    tag="div"
  >
    <span
      data-v-bc209aca=""
      id="app-toolbar-title"
    >
      Comments
    </span>
  </v-toolbar-title-stub>
  
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly in stop reasons overview in mobile 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class="font-weight-medium"
    data-v-bc209aca=""
    tag="div"
  >
    
    <settings-side-menu-stub
      data-v-1333bf53=""
    />
    
  </v-toolbar-title-stub>
  
  <menu-with-button-activator-stub
    buttonclasses=""
    buttonicon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    buttoniconcolor="white"
    buttontype="secondary"
    class="mr-1"
    closeoncontentclick="true"
    data-v-1333bf53=""
    hascheckbox="false"
    iconkey=""
    issingleselect="false"
    items="[object Object],[object Object]"
    listwidth="auto"
    location="bottom right"
    maxwidth="351px"
    minwidth="40px"
    primarytextfield="name"
    secondarytextfield=""
    size="default"
    tertiarytextfield=""
    theme="light"
    value=""
    valuekey=""
  />
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly in user overview 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class=""
    data-v-bc209aca=""
    tag="div"
  >
    <span
      data-v-bc209aca=""
      id="app-toolbar-title"
    >
      User
    </span>
  </v-toolbar-title-stub>
  
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly in user overview in mobile 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class="font-weight-medium"
    data-v-bc209aca=""
    tag="div"
  >
    
    <settings-side-menu-stub
      data-v-1333bf53=""
    />
    
  </v-toolbar-title-stub>
  
  <evocon-v-button-stub
    color=""
    data-v-1333bf53=""
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    iconcolor="white"
    size="default"
    text=""
    textclass=""
    type="primary"
  />
  
</v-app-bar-stub>
`;

exports[`SettingsToolbar > renders correctly without any buttons in mobile view 1`] = `
<v-app-bar-stub
  absolute="false"
  border="false"
  class="pl-1 pr-2 app-bar ml-16"
  collapse="false"
  collapseposition="start"
  data-v-1333bf53=""
  data-v-bc209aca=""
  density="default"
  extensionheight="48"
  flat="false"
  floating="false"
  height="64"
  id="main-app-toolbar"
  location="top"
  modelvalue="true"
  order="0"
  scrollthreshold="300"
  tag="header"
  theme="dark"
  tile="false"
>
  <!-- logo drawer button in small tablets and mobiles -->
  <!--v-if-->
  <!-- back button  -->
  <!--v-if-->
  <!-- title  -->
  <v-toolbar-title-stub
    class="font-weight-medium"
    data-v-bc209aca=""
    tag="div"
  >
    
    <settings-side-menu-stub
      data-v-1333bf53=""
    />
    
  </v-toolbar-title-stub>
  
  
</v-app-bar-stub>
`;
